tests/positive/MiniC/Lib/Data/String.mjuvix
module Data.String;

axiom String : Type;

compile String {
  ghc ↦ "[Char]";
  c ↦ "char*";
};

end;
