tests/negative/CompileBlocks/MultipleCompileBlockSameName.mjuvix
module MultipleCompileBlockSameName;

axiom A : Type;

compile A {
  ghc -> "Bool";
};

compile A {
  ghc -> "Bool";
};

end;
